--- a/Projeto_RA1/Projeto_RA1.csproj
+++ b/Projeto_RA1/Projeto_RA1.csproj
@@ -8,4 +8,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="backend\" />
+    <Folder Include="docs\" />
+    <Folder Include="tests\" />
+    <Folder Include="shared_memory\" />
+    <Folder Include="sockets\" />
+    <Folder Include="pipes\" />
+  </ItemGroup>
+
 </Project>
