rework(Shared Memory/Pipes): move class for easier maintenance, update log outputs

--- a/MemReader/MemReader.csproj
+++ b/MemReader/MemReader.csproj
@@ -7,4 +7,7 @@
 		<OutputPath>$(SolutionDir)dist\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\ShMemConfig\MemConfig.csproj" />
+	</ItemGroup>
 </Project>
