--- a/PipeReader/PipeReader.csproj
+++ b/PipeReader/PipeReader.csproj
@@ -7,4 +7,7 @@
 		<OutputPath>$(SolutionDir)dist\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\PipeConfig\PipeConfig.csproj" />
+	</ItemGroup>
 </Project>
