--- a/SocketClient/SocketWriter.csproj
+++ b/SocketClient/SocketWriter.csproj
@@ -4,7 +4,8 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<OutputPath>$(SolutionDir)dist\</OutputPath>
+
+		<OutputPath>$(SolutionDir)dist\Sockets\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 </Project>
